#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_REVISION($Revision$)

AC_PREREQ(2.61)
AC_INIT(imvirt, 0.3, liske@ibh.de)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([helper/detect.c])
AC_CONFIG_HEADER([helper/config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([stdint.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T

# Checks for library functions.
AC_FUNC_FORK
AC_TYPE_SIGNAL

AC_CONFIG_FILES([
Makefile
helper/Makefile
])

AC_OUTPUT
